src/test/ui/generic-associated-types/issue-80433.stderr
error[E0107]: missing generics for associated type `TestMut::Output`
  --> $DIR/issue-80433.rs:21:47
   |
LL | fn test_simpler<'a>(dst: &'a mut impl TestMut<Output = &'a mut f32>)
   |                                               ^^^^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-80433.rs:7:10
   |
LL |     type Output<'a>;
   |          ^^^^^^ --
help: add missing lifetime argument
   |
LL | fn test_simpler<'a>(dst: &'a mut impl TestMut<Output<'a> = &'a mut f32>)
   |                                               ~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
